Fixed alignment

--- a/Flask/static/style.css
+++ b/Flask/static/style.css
@@ -175,6 +175,9 @@ p {
     font-size: 50px;
 }
 
+.vidInfo {
+    margin-left: 5%;
+}
 
 #row1,
 #row2,
